k3s/disciplina-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disciplina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: disciplina
  template:
    metadata:
      labels:
        app: disciplina
    spec:
      containers:
        - name: disciplina
          image: disciplina:latest
          ports:
            - containerPort: 3001
