k3s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: front:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
