k3s/matricula-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matricula
spec:
  replicas: 2
  selector:
    matchLabels:
      app: matricula
  template:
    metadata:
      labels:
        app: matricula
    spec:
      containers:
        - name: matricula
          image: matricula:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
