k3s/usuario-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuario
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usuario
  template:
    metadata:
      labels:
        app: usuario
    spec:
      containers:
        - name: usuario
          image: usuario:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
