k3s/disciplina-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disciplina
spec:
  selector:
    app: disciplina
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
