k3s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: LoadBalancer
  selector:
    app: front
  ports:
    - port: 8080
      targetPort: 8080
