k3s/matricula-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matricula
spec:
  selector:
    app: matricula
  type: NodePort
  ports:
    - port: 3003
      targetPort: 3003
      nodePort: 30083
